# cloud-surfer

./: .gitignore  Cargo.toml  LICENSE  LICENSE-apache.md  README.md  index.html
.github/workflows/: release.yaml
assets/textures/: cloud_001.aseprite  game_icon.aseprite  grass.aseprite  laser.aseprite  player_left.aseprite  player_right.aseprite
game_plugin/: Cargo.toml
game_plugin/src/: actions.rs  audio.rs  audio_events.rs  game_map.rs  game_over_ui.rs  game_time.rs  lib.rs  loading.rs  menu.rs  obstacles.rs  player.rs  score.rs  scrolling_background.rs
game_plugin/src/loading/: paths.rs
src/: main.rs
