[package]
name = "game_plugin"
version = "0.2.1"
publish = false
authors = ["William Hart <hart.wl@gmail.com>"] # ToDo: you are the author ;)
edition = "2018"

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.4.0" }
rand = "0.8.3"
